# polyglot-meeting-whisperer

./: README.md  docker-compose.yml  requirements.txt
backend/: README.md  requirements.txt  websocket_server.py
backend/agents/: keyword_explainer_agent.py  question_generator_agent.py  summarizer_agent.py  transcribe_agent.py  translate_agent.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AgentCard.js  ControlButtons.js  Dashboard.js  Header.js  KeywordCard.js  QuestionCard.js  SettingsModal.js  StatsPanel.js  SummaryCard.js  TopicCard.js  TranscriptCard.js  TranslatedCard.js
frontend/src/hooks/: useAudioRecording.js
frontend/src/styles/: globals.css
frontend/src/utils/: translator.js
genai-agentos/: .env-example
genai-agentos/cli/_agents/translator_agent/: translator_agent.py
genai-agentos/cli/agents/cloudera_data_agent/: cloudera_data_agent.py  pyproject.toml
genai-agentos/cli/agents/summarizer_agent/: summarizer_agent.py
genai-agentos/cli/agents/summary_qa_agent/: pyproject.toml  summary_qa_agent.py
genai-agentos/cli/agents/transcriber_agent/: transcriber_agent.py
genai-agentos/cli/agents/translator_agent/: pyproject.toml  translator_agent.py
polyglot-backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
polyglot-frontend/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
test/: index.html
transcriber/: loopback.py  transcribe.py  websocket_server.py
transcriber_frontend/: README.md  index.html  transcribe.py  websocket_server.py
